--- a/views/index.pug
+++ b/views/index.pug
@@ -44,6 +44,9 @@ block content
         div(class="input-field col s4")
           input(placeholder="App Args", id="app_args", type="text")
           label(for="app_args")= 'App Args'
+        div(class="input-field col s4")
+          input(placeholder="App Dir", id="app_dir", type="text")
+          label(for="app_dir")= 'App Dir'
         div(class="col s4")
           label
             input(id="app_keepup", type="checkbox", checked="checked")
