--- a/views/index.pug
+++ b/views/index.pug
@@ -47,6 +47,9 @@ block content
         div(class="input-field col s4")
           input(placeholder="App Dir", id="app_dir", type="text")
           label(for="app_dir")= 'App Dir'
+        div(class="input-field col s4")
+          input(placeholder="App Env", id="app_env", type="text")
+          label(for="app_env")= 'App Env'
         div(class="col s4")
           label
             input(id="app_keepup", type="checkbox", checked="checked")
